--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-slick": "^0.29.0",
+    "react-youtube": "^10.1.0",
     "sass": "^1.63.6",
     "slick-carousel": "^1.8.1"
   },
